--- a/src/main/resources/assets/spectral-decorations/lang/en_us.json
+++ b/src/main/resources/assets/spectral-decorations/lang/en_us.json
@@ -2,15 +2,17 @@
   "itemGroup.spectral-decorations.deco": "Spectral Decorations",
 
   "recipeGroup.spectrum.colored_amphoras": "Colored Amphoras",
+  "recipeGroup.spectrum.colored_beams": "Colored Beams",
+  "recipeGroup.spectrum.colored_effulgent_deco": "Colored Effulgent Deco",
   "recipeGroup.spectrum.colored_lanterns": "Colored Lanterns",
   "recipeGroup.spectrum.colored_lights": "Colored Lights",
-  "recipeGroup.spectrum.colored_beams": "Colored Beams",
-  "recipeGroup.spectrum.vanilla_wood_beams": "Wooden Beams",
   "recipeGroup.spectrum.vanilla_wood_amphoras": "Wooden Amphoras",
-  "recipeGroup.spectrum.colored_effulgent_deco": "Colored Effulgent Deco",
+  "recipeGroup.spectrum.vanilla_wood_beams": "Wooden Beams",
+
   "tag.spectral-decorations.colored_effulgent_feathers": "Colored Effulgent Feathers",
 
   "tooltip.spectral-decorations.colored": "Colored ",
+
   "advancements.spectral-decorations.pluck_colored_effulgent_feather.title": "Hue Hue Hue",
   "advancements.spectral-decorations.pluck_colored_effulgent_feather.description": "Use your Paintbrush to color a Kindling and shear a Colored Feather from it",
 
@@ -168,5 +170,33 @@
   "block.spectral-decorations.white_effulgent_carpet": "White Effulgent Carpet",
   "block.spectral-decorations.yellow_effulgent_block": "Yellow Effulgent Block",
   "block.spectral-decorations.yellow_effulgent_cushion": "Yellow Effulgent Cushion",
-  "block.spectral-decorations.yellow_effulgent_carpet": "Yellow Effulgent Carpet"
+  "block.spectral-decorations.yellow_effulgent_carpet": "Yellow Effulgent Carpet",
+
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.name": "Kindling Coloring",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.kindling_coloring.text": "The Paintbrush is able to dye both blocks and dye creatures like Sheep.\\\nNow for an inherently magical creature like the Kindling...\\\n\\\nYou can uncolor Kindlings again by bathing them in [Liquid Crystal](entry://general/liquid_crystal).",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.colored_feathers.title": "Colored Feathers",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.colored_feathers.text": "Your Kindlings soaked up the magical paint like a sponge, saturating the entire plumage with a single brushstroke - unlike Sheep with only superficially coloured wool. Matching feathers were a logical consequence.",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.effulgent_blocks.title": "Effulgent Blocks",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.effulgent_blocks.text": "*Super fluffy.*",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.effulgent_cushions.title": "Effulgent Cushions",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.effulgent_cushions.text": "*Super soft to sit on.*",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.effulgent_carpets.title": "Effulgent Carpets",
+  "book.spectral-decorations.guidebook.colored_effulgent_deco.effulgent_carpets.text": "*And super soft to walk on, too!*",
+
+  "book.spectral-decorations.guidebook.colored_bedrock_armor.name": "Colored Bedrock Armor",
+  "book.spectral-decorations.guidebook.colored_bedrock_armor.page0.text": "Bedrock Armor looks remarkably fancy. What couldn't hurt, however, would be a little more colour choice for your wardrobe. No problem!",
+  "book.spectral-decorations.guidebook.colored_bedrock_armor.page1.text": "Combine any piece of Bedrock Armor with Pigment to dye it.",
+
+  "book.spectral-decorations.guidebook.colored_amphoras.page0.text": "Noxwood is cool and all, but why not make unique Amphoras out of the colorful trees you have come across throughout your journey?",
+  "book.spectral-decorations.guidebook.colored_amphoras.page1.text": "Almost like a barrel, but much more spacious: their capacity matches a double chest.$(br)Comes in all 16 colors. Time to add color coding to your storage room?",
+  "book.spectral-decorations.guidebook.colored_lanterns.page0.text": "Small decorative lanterns. Can be placed on the floor or ceiling, straight or crosswise.$(br)Kneel when placing for an alternative shape.",
+  "book.spectral-decorations.guidebook.colored_lanterns.page1.text": "Come in all 16 colors.",
+  "book.spectral-decorations.guidebook.colored_lights.page0.text": "Decorative blocks that bring color and light to your designs.",
+  "book.spectral-decorations.guidebook.colored_lights.page1.text": "Come in all 16 colors.",
+  "book.spectral-decorations.guidebook.colored_wood_variants.page0.text": "The bright colors of this new type of wood tug at that creative part of your mind. Mere logs and planks won't cut it for some buildings. No, they won't do! You've devised a way to make eye-catching support beams in any color you'd like.",
+  "book.spectral-decorations.guidebook.colored_wood_variants.page1.text": "Comes in all 16 colors.",
+  "book.spectral-decorations.guidebook.vanilla_wood_amphoras.page0.text": "Since you have a whole hodgepodge of different seedlings, why not make unique Amphoras out of these, too?",
+  "book.spectral-decorations.guidebook.vanilla_wood_amphoras.page1.text": "Almost like a barrel, but much more spacious: their capacity matches a double chest.",
+  "book.spectral-decorations.guidebook.vanilla_wood_beams.page0.text": "There is one thing that has never let go of your free spirit: Creativity. Your head regularly fills with new ideas about how you can beautify your home. How about decorative wooden beams? Better than a 9 by 9 cobblestone block, that is for sure.",
+  "book.spectral-decorations.guidebook.vanilla_wood_beams.page1.text": "The Bamboo variant uses a bamboo block instead of a log."
 }
