Fix a misunderstood word

--- a/src/main/resources/assets/spectral-decorations/lang/zh_cn.json
+++ b/src/main/resources/assets/spectral-decorations/lang/zh_cn.json
@@ -11,7 +11,7 @@
   
     "tag.spectral-decorations.colored_effulgent_feathers": "彩色龙翎",
   
-    "tooltip.spectral-decorations.colored": "彩色的 ",
+    "tooltip.spectral-decorations.colored": "颜色：",
   
     "advancements.spectral-decorations.pluck_colored_effulgent_feather.title": "色 禽",
     "advancements.spectral-decorations.pluck_colored_effulgent_feather.description": "用你的画笔为小火龙染色，并从它身上剪毛",
